Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 
 html {
-    background: url('images/christmas_decor_background.jpg');
+    background: url('images/christmas_decor_background.jpg') top center no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 100%
+    /* height: 100%; */
+    background-clip: padding-box;
 }
+
 
 body,
 h1 {
@@ -28,8 +30,8 @@ a{
 
 
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
     html {
        
     }
-}
+} */
